<resources>
    <string name="app_name">LifeCycleDemo</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_java_fullscreen">JavaFullscreenActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_java_bottom_navigation">JavaBottomNavigationActivity</string>
    <string name="title_activity_javva_navvigation_drawer">JavvaNavvigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_kotlin_navigation_drawer">KotlinNavigationDrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_fragment1">Hello blank fragment1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_fragment2">Hello blank fragment2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="helle_fragment3">Hello blank fragment3</string>
</resources>
