<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lyf.lifecycle.fragment.drawer.kotlin.ui.home.KotlinHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lyf.lifecycle.fragment.drawer.kotlin.ui.gallery.KotlinGalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lyf.lifecycle.fragment.drawer.kotlin.ui.slideshow.KotlinSlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.lyf.lifecycle.fragment.drawer.kotlin.ui.tools.KotlinToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.lyf.lifecycle.fragment.drawer.kotlin.ui.share.KotlinShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.lyf.lifecycle.fragment.drawer.kotlin.ui.send.KotlinSendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>