<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lyf.lifecycle.fragment.drawer.java.ui.home.JavaHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_java_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lyf.lifecycle.fragment.drawer.java.ui.gallery.JavaGalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_java_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lyf.lifecycle.fragment.drawer.java.ui.slideshow.JavaSlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_java_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.lyf.lifecycle.fragment.drawer.java.ui.tools.JavaToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_java_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.lyf.lifecycle.fragment.drawer.java.ui.share.JavaShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_java_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.lyf.lifecycle.fragment.drawer.java.ui.send.JavaSendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_java_send" />
</navigation>