<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/java_mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lyf.lifecycle.ui.home.JavaHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_java_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lyf.lifecycle.ui.dashboard.JavaDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_java_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lyf.lifecycle.ui.notifications.JavaNotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_java_notifications" />
</navigation>